[package]
name = "dovepipe"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
repository = "https://github.com/dojje/dovepipe"
keywords = ["udp", "files", "filesending", "sending-files", "sending"]
description = "used for sending files in rust"
documentation = "https://docs.rs/dovepipe"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = {version = "1", features = ["full"]}
log = "0.4.14"

[[example]]
name = "sender"
path = "examples/sender.rs"

[[example]]
name = "reciever"
path = "examples/reciever.rs"
